--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-shrink-0 h-100 p-3 bg-menu" style="width: 280px;">
+<div class="py-3">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-light text-decoration-none">
         <span class="fs-4">Menü</span>
     </a>
@@ -6,7 +6,13 @@
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
             <a href="index.html" class="nav-link">
-                Start
+                Willkommen
+            </a>
+            <a href="1-start.html" class="nav-link">
+                Einrichtung und Programmstart
+            </a>
+            <a href="2-editor.html" class="nav-link">
+                Editor (Programmieroberfläche)
             </a>
         </li>
     </ul>
