--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <title>Programmieren mit TigerJython</title>
+    <title>Programmieren mit TigerJython - Herzlich Willkommen</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -16,18 +16,32 @@
 </head>
 
 <body>
-    <div data-include="header.html"></div>
-    <div class="d-flex flex-row justify-content-start">
-        <div data-include="menu.html"></div>
-        <div class="flex-column w-100">
-            <div class="px-3 py-2">
-                <h1 class="mb-4">Herzlich Willkommen zum Tutorial "Programmieren mit TigerJython"!</h1>
-                <p>
-                    In diesem Tutorial stelle ich dir verschiedene Tipps und Tricks zum Programmieren mit TigerJython vor.
-                    Nutze einfach das Menü im linken Bildschirmbereich um dir die Informationen zu den einzelnen Themen anzusehen.
-                </p>
-                <div class="border-top my-5 py-3">
-                    <a href="1-start.html" class="btn btn-lg btn-secondary float-end">Nächste Seite</a>
+    <div class="container-fluid min-vh-100 d-flex flex-column">
+        <div data-include="header.html" class="row navbar-dark"></div>
+        <div class="row flex-grow-1">
+            <div data-include="menu.html" class="col-xl-3 col-xxl-2 bg-menu"></div>
+            <div class="col-xl-9 col-xxl-10 d-flex flex-column justify-content-between">
+                <div class="row">
+                    <div class="col-12 p-3">
+                        <h1 class="mb-4">Herzlich Willkommen zum Tutorial "Programmieren mit TigerJython"!</h1>
+                        <p>
+                            In diesem Tutorial stelle ich dir verschiedene Tipps und Tricks zum Programmieren mit
+                            TigerJython
+                            vor.
+                            Nutze einfach das Menü im linken Bildschirmbereich um dir die Informationen zu den einzelnen
+                            Themen
+                            anzusehen.
+                        </p>
+                        <p>
+                            <img src="img/welcome.jpg" alt="Herzlich Willkommen"
+                                class="d-block mt-3 img-fluid img-thumbnail" />
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 border-top mt-5 py-3">
+                        <a href="1-start.html" class="btn btn-secondary float-end">Gehe zu &raquo;Einrichtung und Programmstart&laquo;</a>
+                    </div>
                 </div>
             </div>
         </div>
