--- a/template.html
+++ b/template.html
@@ -15,16 +15,31 @@
     <script type="text/javascript" src="js/include.js"></script>
 </head>
 
+
 <body>
-    <div data-include="header.html"></div>
-    <div class="d-flex flex-row justify-content-start">
-        <div data-include="menu.html"></div>
-        <div class="flex-column w-100">
-            <div class="px-3 py-2">
-                <h1>...</h1>
-                <div class="border-top my-5 py-3">
-                    <a href="#" class="btn btn-lg btn-secondary float-start">Vorherige Seite</a>
-                    <a href="#" class="btn btn-lg btn-secondary float-end">Nächste Seite</a>
+    <div class="container-fluid min-vh-100 d-flex flex-column">
+        <div data-include="header.html" class="row navbar-dark"></div>
+        <div class="row flex-grow-1">
+            <div data-include="menu.html" class="col-xl-3 col-xxl-2 bg-menu"></div>
+            <div class="col-xl-9 col-xxl-10 d-flex flex-column justify-content-between">
+                <div class="row">
+                    <div class="col-12 p-3">
+                        <h1 class="mb-4">Herzlich Willkommen zum Tutorial "Programmieren mit TigerJython"!</h1>
+                        <p>
+                            In diesem Tutorial stelle ich dir verschiedene Tipps und Tricks zum Programmieren mit
+                            TigerJython
+                            vor.
+                            Nutze einfach das Menü im linken Bildschirmbereich um dir die Informationen zu den einzelnen
+                            Themen
+                            anzusehen.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 border-top mt-5 py-3">
+                        <a href="#" class="btn btn-secondary float-start">Zurück zu &raquo; &laquo;</a>
+                        <a href="#" class="btn btn-secondary float-end">Gehe zu &raquo; &laquo;</a>
+                    </div>
                 </div>
             </div>
         </div>
