--- a/1-start.html
+++ b/1-start.html
@@ -48,12 +48,12 @@
                         </p>
 
                         <ul>
-                            <li class="mb-3"><img src="img/einrichten/chrome-logo.png" alt="Google Chrome"
-                                    class="browser-logo" />Google Chrome</li>
-                            <li class="mb-3"><img src="img/einrichten/firefox-logo.png" alt="Firefox"
-                                    class="browser-logo" />Firefox</li>
-                            <li class="mb-3"><img src="img/einrichten/edge-logo.jpg" alt="Microsoft Edge"
-                                    class="browser-logo" />Microsoft Edge</li>
+                            <li class="mb-3"><img src="img/chrome-logo.png" alt="Google Chrome"
+                                    class="small-inline-image" />Google Chrome</li>
+                            <li class="mb-3"><img src="img/firefox-logo.png" alt="Firefox"
+                                    class="small-inline-image" />Firefox</li>
+                            <li class="mb-3"><img src="img/edge-logo.jpg" alt="Microsoft Edge"
+                                    class="small-inline-image" />Microsoft Edge</li>
                         </ul>
 
                         <p>
@@ -68,8 +68,8 @@
                                 href="https://webtigerjython.ethz.ch/" target="_blank">WebTigerJython öffnen</a>.
                         </p>
                         <p>
-                            Du solltest nun in deinem Browser ein Bild ähnlich dem Folgenden sehen: 
-                            <br/>
+                            Du solltest nun in deinem Browser ein Bild ähnlich dem Folgenden sehen:
+                            <br />
                             <img src="img/start-1.jpg" alt="URL eingeben"
                                 class="d-block mt-3 img-fluid img-thumbnail" />
                         </p>
@@ -77,7 +77,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12 border-top mt-5 py-3">
-                        <a href="index.html" class="btn btn-secondary float-start">Zurück zu &raquo;Willkommen&laquo;</a>
+                        <a href="index.html" class="btn btn-secondary float-start">Zurück zu
+                            &raquo;Willkommen&laquo;</a>
                         <a href="2-editor.html" class="btn btn-secondary float-end">Gehe zu &raquo;Editor&laquo;</a>
                     </div>
                 </div>
