--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,9 @@
             <a href="2-editor.html" class="nav-link">
                 Editor (Programmieroberfläche)
             </a>
+            <a href="3-erstes-programm.html" class="nav-link">
+                Erstes Programm
+            </a>
         </li>
     </ul>
 </div>
