--- a/2-editor.html
+++ b/2-editor.html
@@ -150,7 +150,7 @@
                 <div class="row">
                     <div class="col-12 border-top mt-5 py-3">
                         <a href="1-start.html" class="btn btn-secondary float-start">Zurück zu &raquo;Einrichtung und Programmstart&laquo;</a>
-                        <a href="#" class="btn btn-secondary float-end">Gehe zu &raquo;Erstes Programm&laquo;</a>
+                        <a href="3-erstes-programm.html" class="btn btn-secondary float-end">Gehe zu &raquo;Erstes Programm&laquo;</a>
                     </div>
                 </div>
             </div>
